2005-09-29  Eric Seidel  <eseidel@apple.com>
        Fix from Mitz Pettel <opendarwin.org@mitzpettel.com>

        Reviewed by mjs.

        * JavaScriptCore.xcodeproj/project.pbxproj:
        Build fix for JSC+SVG after 5161.
        http://bugzilla.opendarwin.org/show_bug.cgi?id=5179

2005-09-28  Geoffrey Garen  <ggaren@apple.com>

	- Fixed <rdar://problem/4275206> Denver Regression: Seed: Past Editions of Opinions display 
	  "NAN/Undefined" for www.washingtonpost.com
	  
        Reviewed by darin.

        * kjs/date_object.cpp:
        (KJS::KRFCDate_parseDate): If the timezone isn't specified, rather than returning
        invalidDate, substitute the local timezone. This matches the behavior of FF/IE.

2005-09-28  Maciej Stachowiak  <mjs@apple.com>

	Patch from George Staikos, reviewed by me.

	- fixed some compile issues on Linux
	
        * kjs/property_slot.h:
        * kjs/simple_number.h:

2005-09-27  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Eric.

	- move HashMap/HashSet code down to JavaScriptCore
	http://bugzilla.opendarwin.org/show_bug.cgi?id=5161
	
        * JavaScriptCore.xcodeproj/project.pbxproj:
        * kjs/internal.cpp:
        (KJS::interpreterMap): Function that fetches the interpreter map on demand. 
        (KJS::InterpreterImp::InterpreterImp): Replace use of InterpreterMap
	class with an appropriate HashMap.
        (KJS::InterpreterImp::clear): ditto
        (KJS::InterpreterImp::interpreterWithGlobalObject): ditto
        * kjs/interpreter_map.cpp: Removed.
        * kjs/interpreter_map.h: Removed.

	The HashMap/HashSet code (copied and slightly tweaked from WebCore)
        
	* kxmlcore/HashFunctions.h: Added.
        (KXMLCore::4):
        (KXMLCore::8):
        (KXMLCore::):
        (KXMLCore::PointerHash::hash):
        (KXMLCore::PointerHash::equal):
        * kxmlcore/HashMap.h: Added.
        (KXMLCore::extractFirst):
        (KXMLCore::HashMap::HashMap):
        (KXMLCore::::size):